--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/tables.css" media="(min-width: 600px)" />
-    <link rel="stylesheet" href="css/desktop.css" media="(min-width: 800px)" />
+    <link rel="stylesheet" href="/assets/css/style.css/>
+    <link rel="stylesheet" href="/assets/css/tables.css/>" media="(min-width: 600px)" />
+    <link rel="stylesheet" href="/assets/css/desktop.css" media="(min-width: 800px)" />
     <title>Developing web</title>
   </head>
   <body>
