--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/style.css/>
-    <link rel="stylesheet" href="/assets/css/tables.css/>" media="(min-width: 600px)" />
+    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="/assets/css/tables.css" media="(min-width: 600px)" />
     <link rel="stylesheet" href="/assets/css/desktop.css" media="(min-width: 800px)" />
     <title>Developing web</title>
   </head>
   <body>
     <header>
       <a href="#" class="logo">
-        <img src="img/application.png" alt="logo" />
+        <img src="/assets/img/application.png" alt="logo" />
       </a>
 
       <nav>
@@ -34,14 +34,14 @@
           eficiente.
         </p>
         <button class="btn"><span>Empezar</span></button>
-        <img src="img/desarrollo-web.jpg" alt="web" class="desweb" />
+        <img src="/assets/img/desarrollo-web.jpg" alt="web" class="desweb" />
       </section>
       <h1 class="titulo-servicios">Servicios</h1>
       <section class="Servicios">
         <div class="card card1">
           <figure class="card-img">
             <img
-              src="img/DAW.png"
+              src="/assets/img/DAW.png"
               alt="Desarrollo
                     de aplicaciones web"
             />
@@ -52,38 +52,35 @@
         </div>
         <div class="card card2">
           <figure class="card-img">
-            <img src="img/HYC.png" alt="Diseño Web HTML5 - CSS3" />
+            <img src="/assets/img/HYC.png" alt="Diseño Web HTML5 - CSS3" />
             <figcaption>Diseño Web HTML5 - CSS3</figcaption>
           </figure>
         </div>
         <div class="card card3">
           <figure class="card-img">
-            <img src="img/test.png" alt="Testing y Calidad" />
+            <img src="/assets/img/test.png" alt="Testing y Calidad" />
             <figcaption>Testing y Calidad</figcaption>
           </figure>
         </div>
         <div class="card card4">
           <figure class="card-img">
-            <img src="img/DAW.png" alt="Consultoria en seguridad" />
+            <img src="/assets/img/DAW.png" alt="Consultoria en seguridad" />
             <figcaption>Consultoria en seguridad</figcaption>
           </figure>
         </div>
         <div class="card card5">
           <figure class="card-img">
-            <img src="img/asistencia.png" alt="Mantenimiento y asistencia" />
+            <img src="/assets/img/asistencia.png" alt="Mantenimiento y asistencia" />
             <figcaption>Mantenimiento y asistencia</figcaption>
           </figure>
         </div>
         <div class="card card6">
           <figure class="card-img">
-            <img src="img/UI.png" alt="Usabilidad y Diseño de UI" />
+            <img src="/assets/img/UI.png" alt="Usabilidad y Diseño de UI" />
             <figcaption>Usabilidad y Diseño de UI</figcaption>
           </figure>
         </div>
       </section>
     </main>
   </body>
-  <footer>
-    <h1>si</h1>
-  </footer>
 </html>
