--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/EJCP3/Reto-con-Responsive/master/assets/css/style.css"/>
     <link rel="stylesheet" href="/assets/css/tables.css" media="(min-width: 600px)" />
     <link rel="stylesheet" href="/assets/css/desktop.css" media="(min-width: 800px)" />
     <title>Developing web</title>
